--- a/style.css
+++ b/style.css
@@ -11,7 +11,10 @@ body {
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
+    display: flex;
+    flex-direction: column;
 }
+
 
 nav {
     position: fixed;
@@ -229,6 +232,16 @@ nav {
     .nav-icon span {
         font-size: 20px;
     }
+}
+
+
+
+/* intégration de la map */
+#map { 
+    height: 100vh;
+    width: auto; 
+    border : 1px solid #c5c5c6;
+    transform: translate(14%);
 }
 
 
