--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ nav {
     background: #fafafa;
     /* rajoute un petite bordure à l'intérieur en bas de la navbar sans ajouter d'élément*/
     box-shadow: inset 0px -1px 0px #c5c5c6;
-
+    z-index: 2;
 }
 
 .nav-icon {
@@ -241,7 +241,33 @@ nav {
     height: 100vh;
     width: auto; 
     border : 1px solid #c5c5c6;
-    transform: translate(14%);
+    z-index: 1;
 }
 
+/* style à l'intérieur de la popup*/
+.cities {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+}
 
+.weatherbox img {
+    width: 170px; height: 170px;
+    
+}
+
+.weatherbox {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.ville {
+    font-size: 30px;
+    text-align: center;
+}
+
+.description {
+    font-size: 15px;
+    align-content: center;
+}
