--- a/style.css
+++ b/style.css
@@ -7,14 +7,34 @@
 }
 
 body {
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
+    font-family: "Madimi One", sans-serif;
+    font-weight: 400;
     font-style: normal;
+    font-size: 30px;
     display: flex;
     flex-direction: column;
 }
 
+/*rajout Naima -- boutons contrôle musique*/
+.btn {
+    color: #0da8f0;
+    display: block;
+    font-family: "Madimi One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
+    text-decoration: none;
+    line-height: 1.5em;
+    margin: 10px;
+    padding: 8px;
+    border-color: #b6e2ee;
+    border-radius: 10px;
+    background: rgb(242, 231, 217) ;
+  }
+
+.active{
+    color: black
+}
 
 nav {
     position: fixed;
@@ -22,9 +42,9 @@ nav {
     display: flex;
     align-items: center;
     padding: 15px 25px;
-    background: #fafafa;
+    background: rgba(240, 216, 186, 0.049);
     /* rajoute un petite bordure à l'intérieur en bas de la navbar sans ajouter d'élément*/
-    box-shadow: inset 0px -1px 0px #c5c5c6;
+    box-shadow: inset 0px -1px 0px #a0c6ed;
     z-index: 2;
 }
 
@@ -32,22 +52,31 @@ nav {
     display: flex;
     align-items: center;
     text-decoration: none;
-    margin-right: 30px;
+    margin-right: 50px;
 }
 
 .nav-icon span {
     font-family: "Madimi One", sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     font-style: normal;
-    font-size: 30px;
+    font-size: 40px;
     margin-left: 10px;
     color: #333;
+    padding: 15px
 }
 
 .nav-icon img{
     width: 50px;
     transform: rotate(-17deg) translateX(5px);
+    /* rajout naima*/
+    transition: 1s;
 }
+
+/* rajout naima -- animation icon*/
+.nav-icon img:hover {
+    scale: 1.25;
+    rotate: 90deg;
+  }
 
 .hamburger {
     display: none;
@@ -55,7 +84,7 @@ nav {
 
 .navlinks-container a {
     margin: 0 10px;
-    font-size: 16px;
+    font-size: 25px;
     font-weight: 500;
     text-decoration: none;
     color: #414141;
@@ -83,37 +112,19 @@ nav {
     transform: scaleX(1);
 }
 
-.nav-authentication{
+#musicButtons{
     margin-left: auto;
+    display: flex;
+    justify-content: center;
 }
 
-.sign-buttons button{
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
-    font-style: normal;
-    font-size: 16px;
-    min-width: 90px;
-    padding: 10px 5px;
-    margin: 0 5px;
-    border-radius: 5px;
-    cursor: pointer;
-    border: none;
-}
 
-.sign-buttons button:nth-child(2) {
-    border: none;
-    background: rgba(231, 145, 168, 0.718);
-}
 
-.sign-user {
-    display: none;
-}
-
-@media (max-width: 1300px) {
+@media (max-width: 1500px) {
     nav {
     padding: 15px 20px;
     position: relative;
+    background: rgba(244, 216, 181, 0.798);
     }
 
     .nav-icon {
@@ -122,12 +133,13 @@ nav {
     }
 
     .nav-icon span {
-        font-size: 22px;
+        font-size: 25px;
     }
 
     .main-navlinks {
         order: 1;
         width: auto;
+       
     }
 
    .hamburger {
@@ -136,9 +148,9 @@ nav {
         cursor: pointer;
         border: none;
         display: flex;
-        background: #fafafa;
         align-items: center;
         position: relative;
+        background: rgba(244, 216, 181, 0.798);
    }
 
    /* les 3 barres de l'hambureger */
@@ -185,13 +197,13 @@ nav {
         flex-direction: column;
         align-items: flex-start;
         position: absolute;
-        background: #fafafa;
         top: 100%;
         left: 0;
         height: 100vh;
         padding: 15px 50px 15px 20px;
-        border-right: 1px solid #c5c5c6;
+        border-right: 1px solid #b6e2ee;
         transform: translate(-100%);
+        background: rgba(240, 216, 186, 0.656);
     }
 
     .open {
@@ -199,28 +211,15 @@ nav {
     }
 
     .navlinks-container a {
-        font-size: 18px;
+        font-size: 20px;
         margin: 10px 0;
     }
 
-    .nav-authentication {
+    #musicButtons {
         order: 3;
         margin-left: 0;
     }
 
-    .sign-buttons {
-        display: none;
-    }
-
-    .sign-user {
-        display: block;
-        cursor: pointer;
-        border: none;
-    }
-
-    .sign-user img {
-        width: 30px;
-    }
 }
 
 /* On réduit la taille de l'icon pour les petits écrans) */
@@ -242,20 +241,27 @@ nav {
     width: auto; 
     border : 1px solid #c5c5c6;
     z-index: 1;
+   
 }
 
 /* style à l'intérieur de la popup*/
 .cities {
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
+    font-family: "Madimi One", sans-serif;
+    font-weight: 400;
     font-style: normal;
 }
 
 .weatherbox img {
     width: 170px; height: 170px;
-    
+    /*transition: 1s ease-in-out 0.3s;*/
+    transition: .5s all ease-in-out;
 }
+
+.weatherbox img:hover {
+    transform: scale(1.25);
+    /*width: 200px;
+    height: 200px;*/
+  }
 
 .weatherbox {
     display: flex;
@@ -263,11 +269,11 @@ nav {
     align-items: center;
 }
 .ville {
-    font-size: 30px;
+    font-size: 35px;
     text-align: center;
 }
 
 .description {
-    font-size: 15px;
+    font-size: 18px;
     align-content: center;
 }
