--- a/style.css
+++ b/style.css
@@ -15,26 +15,6 @@ body {
     flex-direction: column;
 }
 
-/*rajout Naima -- boutons contrôle musique*/
-.btn {
-    color: #0da8f0;
-    display: block;
-    font-family: "Madimi One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 20px;
-    text-decoration: none;
-    line-height: 1.5em;
-    margin: 10px;
-    padding: 8px;
-    border-color: #b6e2ee;
-    border-radius: 10px;
-    background: rgb(242, 231, 217) ;
-  }
-
-.active{
-    color: black
-}
 
 nav {
     position: fixed;
@@ -111,14 +91,6 @@ nav {
 .navlinks-container a:hover::after{
     transform: scaleX(1);
 }
-
-#musicButtons{
-    margin-left: auto;
-    display: flex;
-    justify-content: center;
-}
-
-
 
 @media (max-width: 1500px) {
     nav {
@@ -276,4 +248,116 @@ nav {
 .description {
     font-size: 18px;
     align-content: center;
+}
+
+
+.complentary-info {
+    position: fixed;
+    top: 150px;
+    left: 30%;
+    z-index: 2;
+    background: #0da8f0b6;
+    height: 100vh;
+    width: 0;
+    font-family: "Madimi One", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    color: #c5c5c6;
+    overflow-x: hidden;
+    transition: 0.5s;
+    
+}
+
+ /* à changer en fonction de ce que l'on veut ajouter comme info*/
+ 
+.overlay-content {
+    position: relative;
+    width: 100%;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.complentary-info div {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #333;
+    display: block;
+    transition: 0.3s
+}
+
+.complentary-info .closebtn:hover,
+.complentary-info .closebtn:focus {
+    color: #f1f1f1;
+}
+
+.complentary-info .closebtn {
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    font-size: 25px;
+    color: #c5c5c6;
+}
+
+@media screen and (max-height: 450px) {
+    .complentary-info div {
+        font-size: 15px
+    }
+
+    .complentary-info .closebtn {
+        font-size: 15px;
+        top: 15px;
+        right: 35px;
+    }
+}
+
+
+.detailedInfo {
+    background-color: #414141;
+    min-height: 10px;
+}
+
+.cityImages {
+    height: 200px;
+    width: 200px;
+}
+/*-- boutons contrôle musique*/
+#audio_control {
+    border: 0;
+        background: transparent;
+        color: white;
+        position: relative;
+        overflow: hidden;
+        padding: 20px 50px;
+        border-radius: 50px;
+        /*arrondi du musicButtons*/
+        cursor: pointer;
+        font-size: 1.3em;
+        font-family: "Madimi One", sans-serif;
+        text-transform: uppercase;
+        box-shadow: 0px -0px 0px 0px rgba(143, 64, 248, .5), 0px 0px 0px 0px rgba(39, 200, 255, .5);
+        transition: all .2s;
+  }
+
+#audio_control::after {
+        content: "";
+        /*créer l'élément*/
+        width: 100px;
+        height: 100px;
+        background: linear-gradient(225deg, #98f3f8 0%, #d2a3f5 50%, #f4a4e0 100%);
+        position: absolute;
+        top: -50px;
+        left: -100px;
+        z-index: -1;
+        transition: all .5s;
+}
+
+#audio_control:hover::after {
+    transform: rotate(150deg);
+}
+
+#audio_control:hover {
+    transform: translate(0, -1px);
+    box-shadow: 10px -10px 25px 0px rgba(143, 64, 248, .25), -10px 10px 25px 0px rgba(39, 200, 255, .25);
 }
